--- a/views/account_menuitem.xml
+++ b/views/account_menuitem.xml
@@ -266,6 +266,10 @@
             <!-- <menuitem name="[RevisarNombre] Retenciones AFIP" sequence="9" 
                 id="menu_import_sale_rg3685" action="action_wizard_import_sale_pem" /> -->
 
+            <menuitem name="Archivo RG3685" sequence="3" 
+                id="menu_import_sale_rg3685" action="action_import_sale_rg3685" />
+
+
             <!-- MENU Facturacion/Importar/Controlador Fiscal (*.PEM) -->
             <menuitem name="Archivo Controlador Fiscal (*.PEM)" sequence="4" 
                 id="menu_import_sale_pem" action="action_wizard_import_sale_pem" />
@@ -284,9 +288,6 @@
 
             <!-- <menuitem name="Ventas de MP, etc" sequence="8" 
                 id="menu_import_sale_meli" action="action_wizard_import_sale_pem" /> -->
-
-            <!-- <menuitem name="Archivo RG3685" sequence="9" 
-                id="menu_import_sale_rg3685" action="action_wizard_import_sale_pem" /> -->
 
         </menuitem>
 
