--- a/views/sales_views.xml
+++ b/views/sales_views.xml
@@ -11,29 +11,36 @@
                         groups="account.group_account_user"
                         invisible="context.get('default_move_type') not in ('out_invoice', 'out_refund', 'out_receipt', 'in_invoice', 'in_refund','in_receipt')"/>
                 </header> -->
-                <field name="name" decoration-bf="1"/>
+                <field name="move_type" widget="badge" optional="hide"
+                    decoration-success="move_type in ['in_invoice', 'out_invoice']" 
+                    decoration-warning="move_type in ['in_refund', 'out_refund']" /> <!-- Factura / Nota de Credito -->
+                <field name="invoice_date" string="Fecha Cbte"/>
+                <field name="date" string="Fecha Contable" optional="hide" 
+                    decoration-bf="date != invoice_date"
+                    decoration-warning="date != invoice_date" />
+                <field name="name" string="Comprobante"
+                    decoration-bf="1"
+                    decoration-info="move_type in ['in_invoice', 'out_invoice']"
+                    decoration-warning="move_type in ['in_refund', 'out_refund']" />
+                <!-- TODO: Condicion IVA -->
+                <field name="cuit" />
                 <field name="partner_id" invisible="1"/>
                 <field name="invoice_source_email" invisible="1"/>
                 <field name="invoice_partner_display_name" invisible="context.get('default_move_type') not in ('in_invoice', 'in_refund','in_receipt')" groups="base.group_user" string="Proveedor" />
                 <field name="invoice_partner_display_name" invisible="context.get('default_move_type') not in ('out_invoice', 'out_refund','out_receipt')" groups="base.group_user" string="Cliente" />
-                <field name="invoice_date" string="Fecha"/>
-                <!-- <field name="invoice_date" optional="show" invisible="context.get('default_move_type') not in ('out_invoice', 'out_refund','out_receipt')" string="Invoice Date"/> -->
-                <!-- <field name="invoice_date_due" widget="remaining_days" optional="show" attrs="{'invisible': [['payment_state', 'in', ('paid', 'in_payment', 'reversed')]]}"/> -->
-                <!-- <field name="invoice_origin" optional="hide" string="Source Document"/> -->
-                <!-- <field name="payment_reference" optional="hide" invisible="context.get('default_move_type') in ('out_invoice', 'out_refund','out_receipt')"/> -->
-                <!-- <field name="ref" optional="hide"/> -->
-                <!-- <field name="invoice_user_id" optional="hide" invisible="context.get('default_move_type') not in ('out_invoice', 'out_refund','out_receipt')" string="Sales Person" widget="many2one_avatar_user"/> -->
-                <!-- <field name="activity_ids" widget="list_activity" optional="show"/> -->
-                <!-- <field name="company_id" groups="base.group_multi_company" options="{'no_create': True}" optional="show"/> -->
-                <field name="amount_untaxed_signed" string="Neto Gravado" sum="Total" optional="show"/>
-                <field name="amount_tax_signed" string="Impuestos" sum="Total" optional="hide"/>
-                <field name="amount_total_signed" string="Total" sum="Total" decoration-bf="1" optional="show"/>
-                <!-- <field name="amount_residual_signed" string="Amount Due" sum="Amount Due" optional="hide"/> -->
+                <field name="amount_untaxed" string="Neto Gravado" sum="Total"/>
+                <field name="amount_tax" string="Impuestos" sum="Total" />
+                <field name="amount_total" string="Total" sum="Total" decoration-bf="1"/>
+                <!-- TODO: ver como calcular totales -->
+                <!-- <field name="display_amount_untaxed" />
+                <field name="display_amount_tax" />
+                <field name="display_amount_total" decoration-bf="1" /> -->
+                <!-- TODO: Positivo para facturas. Negativo para notas de credito
+                    Gravado	IVA 21%	IVA 10,5%	Exento	No gravado	Retenc Iva	Percep Iva	PERCEP IIBB	PERCEP MUNICIP	Otros tributos -->
                 <field name="currency_id" invisible="1"/>
                 <field name="company_currency_id" invisible="1"/>
                 <field name="state" widget="badge" decoration-success="state == 'posted'" decoration-info="state == 'draft'" optional="show"/>
                 <!-- <field name="payment_state" widget="badge" decoration-danger="payment_state == 'not_paid'" decoration-warning="payment_state in ('partial', 'in_payment')" decoration-success="payment_state in ('paid', 'reversed')" attrs="{'invisible': [('payment_state', 'in', ('invoicing_legacy'))]}"/> -->
-                <field name="move_type" invisible="context.get('default_move_type', True)"/>
             </tree>
         </field>
     </record>
@@ -45,7 +52,7 @@
         <field name="view_id" ref="view_invoice_tree"/>
         <field name="search_view_id" ref="account.view_account_invoice_filter"/>
         <!-- TODO: agregar rectificativas -->
-        <field name="domain">[('move_type', '=', 'in_invoice')]</field>
+        <field name="domain">[('move_type', 'in', ['in_invoice', 'in_refund'])]</field>
         <field name="context">{'default_move_type': 'in_invoice'}</field>
         <!-- TODO: add this -->
         <!-- <field name="help" type="html">
@@ -57,24 +64,6 @@
         </field> -->
     </record>
 
-    <record id="action_move_in_refund_type" model="ir.actions.act_window">
-        <field name="name">Notas de Crédito</field>
-        <field name="res_model">account.move</field>
-        <field name="view_mode">tree,form</field>
-        <field name="view_id" ref="view_invoice_tree"/>
-        <field name="search_view_id" ref="account.view_account_invoice_filter"/>
-        <field name="domain">[('move_type', '=', 'in_refund')]</field>
-        <field name="context">{'default_move_type': 'in_refund'}</field>
-        <!-- TODO: add this -->
-        <!-- <field name="help" type="html">
-            <p class="o_view_nocontent_smiling_face">
-            Create a vendor credit note
-            </p><p>
-            Note that the easiest way to create a vendor credit note it to do it directly from the vendor bill.
-            </p>
-        </field> -->
-    </record>
-
     <record id="action_move_out_invoice_type" model="ir.actions.act_window">
         <field name="name">Comprobantes Emitidos</field>
         <field name="res_model">account.move</field>
@@ -82,7 +71,7 @@
         <field name="view_id" ref="view_invoice_tree"/>
         <field name="search_view_id" ref="account.view_account_invoice_filter"/>
         <!-- TODO: agregar rectificativas -->
-        <field name="domain">[('move_type', '=', 'out_invoice')]</field>
+        <field name="domain">[('move_type', 'in', ['out_invoice', 'out_refund'])]</field>
         <field name="context">{'default_move_type': 'out_invoice'}</field>
         <!-- TODO: add this -->
         <!-- <field name="help" type="html">
@@ -90,25 +79,6 @@
             Create a customer invoice
             </p><p>
             Create invoices, register payments and keep track of the discussions with your customers.
-            </p>
-        </field> -->
-    </record>
-
-    <record id="action_move_out_refund_type" model="ir.actions.act_window">
-        <field name="name">Notas de Crédito</field>
-        <field name="res_model">account.move</field>
-        <field name="view_mode">tree,form</field>
-        <field name="view_id" ref="view_invoice_tree"/>
-        <field name="search_view_id" ref="account.view_account_invoice_filter"/>
-        <field name="domain">[('move_type', '=', 'out_refund')]</field>
-        <field name="context">{'default_move_type': 'out_refund'}</field>
-        <!-- TODO: add this -->
-        <!-- <field name="help" type="html">
-            <p class="o_view_nocontent_smiling_face">
-            Create a credit note
-            </p><p>
-            Note that the easiest way to create a credit note is to do it directly
-            from the customer invoice.
             </p>
         </field> -->
     </record>
