--- a/wizard/import_sale_compemitidos.xml
+++ b/wizard/import_sale_compemitidos.xml
@@ -20,11 +20,11 @@
                             <!-- <field name="invoice_type" edit="false" /> -->
                             <!-- <field name="pos_number" edit="false" /> -->
                             <!-- <field name="invoice_number" edit="false" /> -->
-                            <field name="taxed_amount" />
-                            <field name="untaxed_amount" optional="show" />
-                            <field name="exempt_amount" optional="show" />
+                            <field name="taxed_amount" sum="Total" />
+                            <field name="untaxed_amount" sum="Total" optional="show" />
+                            <field name="exempt_amount" sum="Total" optional="show" />
                             <field name="iva" />
-                            <field name="difference" optional="hide" />
+                            <field name="difference" sum="Total" optional="hide" />
                             <field name="total" />
                             <field name="partner" string="Cliente" optional="hide" edit="false" />
                             <field name="cuit" optional="hide" edit="false" />
